--- a/src/components/FilterDropdown/FilterDropdown.module.scss
+++ b/src/components/FilterDropdown/FilterDropdown.module.scss
@@ -1,7 +1,7 @@
 .filterDropdown {
   position: absolute;
   right: -13px;
-  top: -12px;
+  top: -11px;
   background: #fff;
   z-index: 10;
   padding: 0em;
@@ -12,7 +12,7 @@
 .filterDropdownHeader {
   display: flex;
   justify-content: space-between;
-  min-height: 48px;
+  height: 57.5px;
   @apply border-b px-8 py-5 items-center
 }
 
