--- a/src/assets/general.scss
+++ b/src/assets/general.scss
@@ -15,18 +15,18 @@
 }
 
 :root {
-  font-family: "Lato", sans-serif;
-  line-height: 1.5;
-  font-weight: 300;
-  font-size: 14px;
+  --font-family: "Lato", sans-serif;
+  --line-height: 1.5;
+  --font-weight: 300;
+  --font-size: 14px;
 
-  color: #828282;
-  background-color: #fff;
+  --color: #828282;
+  --background-color: #fff;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --font-synthesis: none;
+  --text-rendering: optimizeLegibility;
+  --webkit-font-smoothing: antialiased;
+  --moz-osx-font-smoothing: grayscale;
 }
 
 #root {
@@ -34,34 +34,19 @@
   @apply min-h-screen;
 }
 
-a {
-  font-weight: 500;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #006fff;
-}
-
 body {
   margin: 0;
   display: flex;
   min-width: 320px;
   min-height: 100vh;
-}
-
-h1 {
-  font-size: 1rem;
-  line-height: 1.1;
-}
-
-.container {
-  max-width: 1280px;
-  width: 100%;
-  margin: 0 auto;
-}
-
-input {
-  &:focus {
-    border: 0;
-  }
+  font-family: var(--font-family);
+  line-height: var(--line-height);
+  font-weight: var(--font-weight);
+  font-size: var(--font-size);
+  color: var(--color);
+  background-color: var(--background-color);
+  font-synthesis: var(--font-synthesis);
+  text-rendering: var(--text-rendering);
+  -webkit-font-smoothing: var(--webkit-font-smoothing);
+  -moz-osx-font-smoothing: var(--moz-osx-font-smoothing);
 }
